--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,80 @@
-*{
+* {
   margin: 0px;
   padding: 0px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #ccc;
 }
+
+html {
+  width: auto;
+  height: 100%;
+  background-image: linear-gradient(to top left, #0b0c10, #1d2029);
+}
+
+header {
+  background-color: #121317;
+  top: 0;
+  height: 6vh;
+  width: 100%;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 4vh;
+  margin-bottom: 2rem;
+}
+
+footer {
+  background-color: #121317;
+  position: fixed;
+  bottom: 0;
+  height: 10vh;
+  padding-top: 1rem;
+  padding-left: 10%;
+  padding-right: 10%;
+  text-align: center;
+}
+
+#display {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 50vh;
+  height: 50vh;
+}
+
+#screen {
+  flex: 0 1 20%;
+  align-self: center;
+}
+
+#boardContainer {
+  justify-content: center;
+  display: flex;
+  flex: 0 1 80%;
+  flex-direction: column;
+  height: auto;
+  width: auto;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex: 0 1 33%;
+  width: 100%;
+  height: 100%;
+}
+
+.gridContent {
+  background-color: #ccc;
+  color: black;
+  box-sizing: border-box;
+  text-align: center;
+  align-self: center;
+  flex: 0 1 33%;
+  font-size: 9vh;
+  width: 100%;
+  height: 100%;
+  border: 1px solid grey;
+}
+
+.row>p:nth-child(2) {}
