--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,6 @@ footer {
 
 .gridContent {
   background-color: #ccc;
-  color: black;
   box-sizing: border-box;
   text-align: center;
   align-self: center;
@@ -75,12 +74,19 @@ footer {
   width: 100%;
   height: 100%;
   border: 1px solid grey;
+  transition: color 1s;
+  color: transparent;
+  text-shadow: 0 0 0 rgb(40, 44, 78);
+  transition: text-shadow 0.2s;
 }
 
-.gridContent:hover{
+.gridContent:hover {
   cursor: pointer;
   background-color: #eee;
   transition: background-color .3s;
 }
 
-.row>p:nth-child(2) {}
+.taken {
+  color: transparent;
+  text-shadow: 0 0 0 rgb(184, 70, 70);
+}
