--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,9 @@ footer {
   position: fixed;
   bottom: 0;
   height: 10vh;
-  padding-top: 1rem;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-top: 2rem;
   text-align: center;
+  width: 100%;
 }
 
 #display {
@@ -98,4 +97,20 @@ header, .gridContent {
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+}
+
+#restartButton {
+  padding: 1rem;
+  border-radius: 1rem;
+  text-transform: uppercase;
+  font-size: 1rem;
+  color: #ccc;
+  background-color: #0b0c10;
+  border: transparent;
+}
+
+#restartButton:hover {
+  color: #bbb;
+  cursor: pointer;
+  background-color: #1d2029;
 }
